src/components/header/styles.scss
/* ... */
/* search popup */

.search {
  .search-products {
    height: calc(100vh - 180px);
  }
  .search-products-m {
    height: calc(100vh - 188px);
  }
  .search-products-ipad {
    height: calc(100vh - 180px);
  }
}

.search {
  // background-color: #f8f8f5;
  background-color: white;
  position: absolute;
  top: 0;
  width: 100%;
  visibility: hidden;
  &.row {
    margin-left: 0;
    margin-right: 0;
  }

.search-feature {
  text-decoration: underline;
  cursor: pointer;
  margin-top: 6px;
  font-size: 12px;
  font-weight: bold;
  a {
    color: #ab1e56;
    text-decoration: underline;
  }
  text-transform: uppercase;
  letter-spacing: 1px;
}
.search-shadow {
  @include bottom-shadow();
  background-color: $white;
}
.image-content {
  min-height: 120px;
  text-align: center;
  height: 110px;
  margin-top: 15px;
  p {
    margin: 5px 0;
  }
}
.search-input-block {
  line-height: 0;
  display: inline-block;
  line-height: 100px;
  input {
    width: 100%;
    border: 1px solid tint(#000, 80%);
    margin: 20px auto;
    background-color: $white;
    padding: 0 200px 0 120px;
    line-height: 60px;
    font-size: 20px;
    font-family: "Montserrat";
    letter-spacing: 0.5px;
    &::placeholder{
      @include search_placeholder();
      color: $light-charcoal
    }
  }
  .link-results {
    position: absolute;
    white-space: pre-wrap;
    right: 7%;
    cursor: pointer;
    @include view_all_results();
    &.gold-color{
      color: #9C7D50
    }
  }
  .icon-search-popup {
    // cursor: pointer;
    font-size: 23px;
    color: $charcoal19;
    position: absolute;
    top: 35%;
    left: 3%;
  }
  .icon-search-cross {
    cursor: pointer;
    position: absolute;
    top: 40%;
    font-size: 1em;
    right: -6%;
    height: 40px;
    width: 40px;
    font-weight: bold;
  }
}
.search-products {
  height: calc(100vh - 180px);
  overflow-y: scroll;
  overflow-x: hidden;
  -moz-appearance: none;
  appearance: none;
  // @include scrollbar-default();
  // &:hover {
  //   @include scrollbar();
  // }
  .suggestion-box-width{
    max-width: 20%;
    flex: 0 0 20%;
    @media screen and (max-width: 500px) {
      max-width: 49% !important;
      flex: 0 0 49%;
    }
    @media screen and (min-width: 501px) and (max-width: 992px) {
      max-width: 32% !important;
      flex: 0 0 32%;
    }
  }
  .checkheight {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    min-height: 300px;
  }
  .checkheight-mobile {
    min-height: 300px;
    padding: 0 0.6rem 0 1rem;
    
    @media screen and (min-width: 501px) and (max-width: 992px) {
      padding: 0 1.6rem 0 2rem;
    }
  }
  .left {
    justify-content: space-between;
  }
  .no-suggestion-padding {
    padding: 0 10rem 0 10rem;
  }
  .only-suggestion-min-height {
    min-height: 100px;
    flex-direction: column;
    .suggestion {
      padding-left: 120px;
    }
    .suggestion-text {
      margin-left: 120px;
    }
  }
  .only-suggestion-mobile {
    padding: 0;
    .suggestion {
      padding-left: 20px;
    }
    .suggestion-text {
      margin-left: 20px;
    }
  }
}
.only-suggestion-height {
  .suggestion {
    padding-left: 0;
  }
  .suggestion-text {
    margin-left: 0;
  }
}
}
.both-products-suggestions-mobile {
  .suggestions-flex {
    flex-direction: column;  
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
  }
  .suggestion {
    text-align: left;
    padding-left: 20px;
  }
  .suggestion-text {
    text-align: left;
    margin-left: 20px;
  }
}
.search-imagebox-new {
position: relative;
display: block;
width: 100%;
height: auto;
overflow: hidden;
padding: 135% 0 0 0;
}

.search-heading {
text-transform: capitalize;
font-size: 25px;
h2 {
  @include h2_24px_lora_charcoal();
  line-height: 60px;
  text-transform: capitalize;
  margin-top: 60px;
}
}

.search-image-title {
font-size: 16px;
text-transform: uppercase;
color: #464646;
font-family: "HeaderFont","Trebuchet MS","geneva";
display: block;
text-align: center;
letter-spacing: 0.5px;
position: relative;
}

.search-bottom-block-second {
width: 100vw;
height: 150px;
z-index: 10;
padding: 10px 0;
}

.search-bottom-block {
//position: fixed;
// bottom: 0;
width: 100vw;
height: 150px;
z-index: 10;
padding: 10px 0;
.count {
  font-style: italic;
  margin-top: 25px;
  font-size: 13px;
  letter-spacing: .5px;
}
button {
  height: 50px;
  width: 207px;
  border: 0px;
  cursor: pointer;
  margin-top: 6px;
  font-size: 14px;
  background-color: $med-charcoal;
  color: white;
  text-transform: uppercase;
  letter-spacing: .5px;
  font-family: $font-Montserrat;
}
}

.header-container {
.search {
  visibility: visible;
  z-index: 1;
  @include transition(all, 1s, ease-in-out);
  top: $header-height;
}
  .search-timer {
    top: $header-height + $timer-height;
  }
}

.search-block-page {
cursor: pointer;
input {
  width: 100%;
  background-color: $white;
  padding: 0 120px;
  line-height: 60px;
  font-size: 20px;
}
.icon-search-popup {

  font-size: 23px;
  color: $charcoal19;
  position: absolute;
  top: 30%;
  right: 3%;
}
}
.icon-style-cross {
  font-size: 14px;
  padding-top: 4px;
  // top: 0px;
  padding-right: 8px;
  // margin-left: -30px;
  color: #000;
  font-weight: bold;
}
.npf-msg {
letter-spacing: 1px;
@include b3_14px_montserrat_light_charcoal();
  span {
    @include b3_14px_montserrat_gold();
  }
}

@media screen and (max-width: 992px) {
.search-bottom-block {
  height: 200px;
}
.search-bottom-block-second {
  height: 200px;
}
.search {
  .search-input-block {
    line-height: 60px;
    input {
      padding: 0 170px 0 20px;
      border: none;
      line-height: 40px;
    }
    .link-results {
      right: 12%;
      top: 15%;
      &.mobile-link-results{
        right: 6%;
        font-size: 9px;
      }
    }
  }
}

.npf-msg {
  font-size: 15px;
}
.banner-mobile-category {
  margin-top: 70px;
}

.mobile-nosearch{
  position: relative !important;
}
}
/* ... */

